--- a/templates/juniorQuestionnaire.html
+++ b/templates/juniorQuestionnaire.html
@@ -405,7 +405,7 @@ document.querySelector("form").addEventListener("submit", function (e) {
 
 
   function collectFormData() {
-    e.preventDefault();
+    //e.preventDefault();
 
     
 
