--- a/templates/4.html
+++ b/templates/4.html
@@ -49,6 +49,12 @@
     font-family: Assistant, sans-serif;
     }
 
+    table {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+}
+	
     th, td {
         position: relative; /* Ensures div fills up correctly */
         border: 1px solid #4d0000ff; /* Subtle border */
